[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Computer.gd" type="Script" id=1]
[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ComputerPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Computer" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 40, 0 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.05408, 0.263519 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="ComputerLight" type="Light2D" parent="."]
position = Vector2( 26.8053, -0.113251 )
rotation = 1.5708
enabled = false
texture = ExtResource( 4 )
texture_scale = 0.7

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -17.5
margin_right = 23.0
margin_bottom = 17.5
rect_rotation = -90.0
rect_pivot_offset = Vector2( 23, 17.5 )
theme = ExtResource( 5 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
